se hacen cambios varios

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4330,6 +4330,7 @@ input[type="button"].btn-block {
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+  background-color: #000 !important;
 }
 
 .navbar .container,
@@ -6763,7 +6764,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #000 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
