--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,66 @@
-label{
-    width: 100%;
+.nombre {
+    font-family:'Times New Roman', Times, serif;
+    color: black;
+    background-color: gold;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+body{
+    background-color: rgb(0, 0, 0);
+    color: gold;
+}
+.columnas{
+    color: gold;
+}
+/* .display{
+    color:black;
+} */
+.btn-primary{
+    color:black
+}
+.btn-danger{
+    color: black;
+}
+.table{
+    color:rgb(255, 217, 0);
+}
+thead{
+    color:black;
+}
+.table-primary{
+    
+    background-color: grey;
+}
+.nav{
+    color:red;
+}
+
+.titulo-ses{
+    align-self: center;
+}
+.navbar-negro{
+    background-color: rgb(43, 42, 42) !important;
+}
+
+.navbar-brand{
+    color: orange;
+}
+
+.titulo1{
+    color: black;
+}
+ .table-primary>th {
+    background-color: rgb(255, 187, 0) !important;
+}
+.table-primary tbody+tbody, .table-primary td, .table-primary th, .table-primary thead th{
+    border-color: orange;
+}
+
+a {
+    color: red;
+}
+
+.bg-dark{
+    background-color: rgb(43, 42, 42) !important;
 }
